[gd_scene load_steps=10 format=2]

[ext_resource path="res://img/69e4cc7c-29a2-472c-b35f-a899ac5ef803_rw_1920.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/gameboy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://other/levelsel.gd" type="Script" id=3]
[ext_resource path="res://audio/a-hero-of-the-80s-126684.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[node name="level select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -4.0
margin_right = 1024.0
margin_bottom = 603.0
texture = ExtResource( 1 )
expand = true

[node name="7" type="Button" parent="."]
margin_left = 405.0
margin_top = 385.0
margin_right = 589.0
margin_bottom = 405.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 7"
align = 0

[node name="8" type="Button" parent="."]
margin_left = 404.0
margin_top = 435.0
margin_right = 588.0
margin_bottom = 455.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 8"
align = 0

[node name="6" type="Button" parent="."]
margin_left = 406.0
margin_top = 337.0
margin_right = 590.0
margin_bottom = 357.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 6"
align = 0

[node name="5" type="Button" parent="."]
margin_left = 406.0
margin_top = 289.0
margin_right = 590.0
margin_bottom = 309.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 5"
align = 0

[node name="4" type="Button" parent="."]
margin_left = 405.0
margin_top = 237.0
margin_right = 589.0
margin_bottom = 257.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 4"
align = 0

[node name="3" type="Button" parent="."]
margin_left = 408.0
margin_top = 188.0
margin_right = 592.0
margin_bottom = 208.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 3"
align = 0

[node name="2" type="Button" parent="."]
margin_left = 408.0
margin_top = 136.0
margin_right = 592.0
margin_bottom = 156.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 2"
align = 0

[node name="1" type="Button" parent="."]
margin_left = 410.0
margin_top = 74.0
margin_right = 582.0
margin_bottom = 104.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 2, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.866667, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level 1"
align = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
